src/components/Navbar/styles.module.css
/* styles/Navbar.module.css */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
  background-color: #029D9D;
  color: white;
  /* position:fixed; */
}

.logo {
  font-size: 1.5rem;
  font-weight: bold;
}

.navMenu {
    width: 70%;
  display: flex;
  align-items: center;
}

.navItems {
    width: 70%;
    /* background-color: red; */
    font-size: 1.2rem;
    font-weight: bold;
    justify-content: space-evenly;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.navItems li {
  margin-left: 1rem;
}

.navItems a {
  color: white;
  text-decoration: none;
}

.bookingButton {
  background-color: white;
  color: #029D9D;
  font-weight: bold;
  border: none;
  padding: 0.5rem 1rem;
  border-radius: 5px;
  cursor: pointer;
  margin-left: 1rem;
}
.bookingButton:hover{
  background-color: #029D9D;
  color: white;
  border: none;
  padding: 0.5rem 1rem;
  border:2px solid white;
  border-radius: 5px;
  cursor: pointer;
  margin-left: 1rem;
}

.hamburger {
  display: none;
  flex-direction: column;
  cursor: pointer;
}

.hamburger span {
  height: 2px;
  width: 25px;
  background-color: white;
  margin-bottom: 4px;
  border-radius: 5px;
}

@media (max-width: 1048px) {
  .navMenu {
    width: 100%;
    overflow: hidden;
    display: none;
    flex-direction: column;
    position: absolute;
    top: 60px;
    left: 0;
    right: 0;
    background-color: #029D9D;
    padding: 1rem; 
     }

  .navMenu.open {
    display: flex;
  }

  .navItems {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
  }

  .navItems li {
    margin: 0.5rem 0;

  }
  .navItems li:hover{
    border-bottom: 2px solid white;
  }

  .hamburger {
    display: flex;
  }

  .bookingButton {
    margin: 1rem 0 0 0;
    width: 100%;
  }
}

